-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 14
-
Component/s: hotspot
-
b26
-
generic
-
linux
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8246682 | 13.0.4 | Matthias Baesken | P2 | Resolved | Fixed | b04 |
| JDK-8252069 | 11.0.10-oracle | Vaibhav Choudhary | P2 | Resolved | Fixed | b01 |
| JDK-8252319 | 11.0.9-oracle | Vaibhav Choudhary | P2 | Closed | Fixed | b06 |
| JDK-8235901 | 11.0.7 | Matthias Baesken | P2 | Resolved | Fixed | b01 |
| JDK-8247802 | openjdk8u272 | Matthias Baesken | P2 | Resolved | Fixed | b01 |
After 8235243 I get on Linux :
src/hotspot/share/runtime/abstract_vm_version.cpp:239:40: error: missing terminating " character [-Werror]
Reason is a missing " which I have to add.
src/hotspot/share/runtime/abstract_vm_version.cpp:239:40: error: missing terminating " character [-Werror]
Reason is a missing " which I have to add.
- backported by
-
JDK-8235901 build failure on Linux after 8235243
-
- Resolved
-
-
JDK-8246682 build failure on Linux after 8235243
-
- Resolved
-
-
JDK-8247802 build failure on Linux after 8235243
-
- Resolved
-
-
JDK-8252069 build failure on Linux after 8235243
-
- Resolved
-
-
JDK-8252319 build failure on Linux after 8235243
-
- Closed
-
- relates to
-
JDK-8235243 handle VS2017 15.9 and VS2019 in abstract_vm_version
-
- Resolved
-
(1 relates to)