8235325: build failure on Linux after 8235243

Reviewed-by: clanger